--- a/Official_Blog/CSS/blog-post-css/blog-post-con.css
+++ b/Official_Blog/CSS/blog-post-css/blog-post-con.css
@@ -6,7 +6,7 @@
 }
 #container-3 {
     grid-area: con3; /*picture 1*/
-    background-image: url("/IMAGES/pao.jpeg");
+    background-image: url("../../IMAGES/pao.jpeg");
     height: 250px;
     background-size: cover;
     background-position: 65% 75%;
@@ -34,7 +34,7 @@
     max-height: 100%;
     height: 250px;
     background-size:cover;
-    background-image: url("/IMAGES/pic3.jpg");
+    background-image: url("../../IMAGES/pic3.jpg");
     background-position: center;
 }
 #container-9 {
