--- a/Official_Blog/CSS/blog-website-css/blog-website.css
+++ b/Official_Blog/CSS/blog-website-css/blog-website.css
@@ -1,6 +1,6 @@
-@import "/CSS/blog-website-css/blog-website-cards.css";
-@import "/CSS/blog-website-css/blog-website-media.css";
-@import "/CSS/blog-website-css/blog-website-author.css";
+@import "blog-website-author.css";
+@import "blog-website-cards.css";
+@import "blog-website-media.css";
 img {
     height: 200px;
     width: 200px;
@@ -21,7 +21,7 @@ header {
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    background-image: url("/IMAGES/contact-photo.JPG");
+    background-image: url("../../IMAGES/contact-photo.JPG");
     background-size: cover;
 }
 
